bin/console/src/chatwidget/snapshots/chaos_console__chatwidget__tests__disabled_slash_command_while_task_running_snapshot.snap
---
source: bin/console/src/chatwidget/tests.rs
assertion_line: 7028
expression: blob
---
■ '/model' is disabled while a task is in progress.
