bin/console/src/chatwidget/snapshots/chaos_console__chatwidget__tests__exec_approval_history_decision_aborted_long.snap
---
source: bin/console/src/chatwidget/tests.rs
expression: lines_to_single_string(&aborted_long)
---
✗ You canceled the request to run echo
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa...
