bin/console/src/chatwidget/snapshots/chaos_console__chatwidget__tests__exec_approval_modal_exec.snap
---
source: bin/console/src/chatwidget/tests.rs
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 13 },
    content: [
        "                                                                                ",
        "                                                                                ",
        "  Would you like to run the following command?                                  ",
        "                                                                                ",
        "  Reason: this is a test reason such as one that would be produced by the       ",
        "  model                                                                         ",
        "                                                                                ",
        "  $ echo hello world                                                            ",
        "                                                                                ",
        "› 1. Yes, proceed (y)                                                           ",
        "  2. No, and tell Chaos what to do differently (esc)                            ",
        "                                                                                ",
        "  Press enter to confirm or esc to cancel                                       ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: LightGreen, bg: DarkGray, underline: Reset, modifier: NONE,
        x: 2, y: 2, fg: LightGreen, bg: DarkGray, underline: Reset, modifier: BOLD,
        x: 46, y: 2, fg: LightGreen, bg: DarkGray, underline: Reset, modifier: NONE,
        x: 10, y: 4, fg: LightGreen, bg: DarkGray, underline: Reset, modifier: ITALIC,
        x: 73, y: 4, fg: LightGreen, bg: DarkGray, underline: Reset, modifier: NONE,
        x: 2, y: 5, fg: LightGreen, bg: DarkGray, underline: Reset, modifier: ITALIC,
        x: 7, y: 5, fg: LightGreen, bg: DarkGray, underline: Reset, modifier: NONE,
        x: 4, y: 7, fg: Rgb(137, 180, 250), bg: DarkGray, underline: Reset, modifier: NONE,
        x: 8, y: 7, fg: Rgb(205, 214, 244), bg: DarkGray, underline: Reset, modifier: NONE,
        x: 20, y: 7, fg: LightGreen, bg: DarkGray, underline: Reset, modifier: NONE,
        x: 0, y: 9, fg: Cyan, bg: DarkGray, underline: Reset, modifier: BOLD,
        x: 21, y: 9, fg: LightGreen, bg: DarkGray, underline: Reset, modifier: NONE,
        x: 48, y: 10, fg: Green, bg: DarkGray, underline: Reset, modifier: DIM,
        x: 51, y: 10, fg: LightGreen, bg: DarkGray, underline: Reset, modifier: NONE,
        x: 0, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 8, y: 12, fg: Green, bg: Reset, underline: Reset, modifier: DIM,
        x: 13, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 28, y: 12, fg: Green, bg: Reset, underline: Reset, modifier: DIM,
        x: 31, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
    ]
}
