bin/console/src/chatwidget/snapshots/chaos_console__chatwidget__tests__exec_unknown_end_with_active_exploring_cell.snap
---
source: bin/console/src/chatwidget/tests.rs
expression: snapshot
---
History:
• Ran echo repro-marker
  └ repro-marker

Active:
• Exploring
  └ Read null
