bin/console/src/chatwidget/snapshots/chaos_console__chatwidget__tests__exec_wait_status_renders_command_in_single_details_row.snap
---
source: bin/console/src/chatwidget/tests.rs
expression: rendered
---
• Waiting for background terminal (0s • esc to …
  └ cargo test -p chaos-kern -- --exact…


› Ask Chaos to do anything

  ? for shortcuts            100% context left
