bin/console/src/chatwidget/snapshots/chaos_console__chatwidget__tests__exploring_step2_finish_ls.snap
---
source: bin/xserver/src/chatwidget/tests.rs
expression: active_blob(&chat)
---
• Explored
  └ List ls -la
