bin/console/src/chatwidget/snapshots/chaos_console__chatwidget__tests__exploring_step4_finish_cat_foo.snap
---
source: bin/console/src/chatwidget/tests.rs
expression: active_blob(&chat)
---
• Explored
  └ List ls -la
    Read foo.txt
