bin/console/src/chatwidget/snapshots/chaos_console__chatwidget__tests__exploring_step6_finish_cat_bar.snap
---
source: bin/xserver/src/chatwidget/tests.rs
expression: active_blob(&chat)
---
• Explored
  └ List ls -la
    Read foo.txt, bar.txt
